# genome-kmers

./: .flake8  .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: algorithm.rst  conf.py  development.rst  examples.rst  genome_kmers.rst  index.rst  modules.rst  overview.rst  requirements.txt
genome_kmers/: kmers.py  sequence_collection.py
profiling/: run_profiling.py  utils.py
src/genome_kmers/: kmers.py  sequence_collection.py
tests/: test_kmers.py  test_sequence_collection.py
tools/: run_profiling.py
